Release Notes

* 3/23/2016
  * fixed cloned jobs to set pandaIDs in Dataset_Contents
  * added changeTaskModTimePanda and triggerTaskBrokerage
  * fixed AdderAtlas for RSEProtocolNotSupported
  * added checkClonedJob
  * changed localEsMerge to send merge jobs to score

* 3/21/2016
  * changed checkTaskStatus to allow updates in exhausted
  * fixed retryJob not to add metadata
  * fixed ES merge retry to take attemptNr into account
  * fixed killESC for multiple inputs
  
* 3/18/2016
  * resetting ramCount to 0 for ES merge

* 3/16/2016
  * added putLogToOS
  * added newParams in retryTask
  * changed dispatcher to ignore fairshare for ES merge

* 3/14/2016
  * introduced jobSubStatus=pilot_closed

* 3/10/2016
  * added isSuperUser

* 3/9/2016
  * added changeTaskSplitRule
  * added changeTaskAttribute
  * fixed ppEvt for nucleus without localEsMerge
	
* 3/8/2016
  * fixed to properly decrease priorities for group analysis

* 3/7/2016
  * using is_local in DdmSpec

* 3/2/2016
  * changed retryTask for running tasks to reactivate failed inputs

* 2/29/2016
  * fixed updateForPilotRetryJEDI to update outPandaID

* 2/25/2016
  * changed SiteSpec.isDirectIO to take direct_access_lan into account

* 2/23/2016
  * added getAssoicatedEndpoint to DdmSpec

* 2/22/2016
  * added allowWanInputAccess

* 2/19/2016
  * setting jobSubStatus to upstream jobs when merge is failed

* 2/18/2016
  * fixed getCriteria for groups without wildcards

* 2/17/2016
  * added getDispatchDatasetsPerUser

* 2/16/2016
  * using datasets.currentfiles to store dis size

* 2/15/2016
  * using 14days lifetime for panda rules
  * added altStgOut

* 2/12/2016
  * changed NucleusSpec to ignore SPECIAL
  * added protection against space_*=None
  * added softkill for ES preemption
  * using asynchronous rules for GEN dis

* 2/9/2016
  * added mode to reassignTaskTo*
  * added file check for assigned jobs
  * changed HC DN for glexec

* 2/8/2016
  * added esPreemption

* 2/4/2016